gccida/c1/store_parm_decls
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6929:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v0; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6937:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6940:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6942:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6948:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6950:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6951:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6960:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6963:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6968:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6970:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6971:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6972:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6976:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:6977:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:7213:45: error: expected expression
if ( !v17 || !v18 || ( v19 = *( tree_node **)( v17[4] + 128LL), v19 == ( tree_node *)*( &global_trees + 27)) ) 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/c-decl.c:7213:33: error: use of undeclared identifier 'tree_node'
if ( !v17 || !v18 || ( v19 = *( tree_node **)( v17[4] + 128LL), v19 == ( tree_node *)*( &global_trees + 27)) ) 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_parm_decls/src/obj/c-decl.o] Error 1
